still working on this one

--- a/SLC-Dental/index.html
+++ b/SLC-Dental/index.html
@@ -5,7 +5,7 @@
 <body>
     <div class="top"><div class="address">Dentist in Salt Lake City,Dr. Brigham Stoker DDS, 144 South 700 East, Suite 2, Salt Lake City, UT 84102</div><div class="phone">8015056850</div>
         <canvas width="28" height="13" style="width: 28px; height: 13px; top: -2px; left -4px;"></canvas>
-        <div class="social__media">twitter facebook youtube LinkedIn</div>
+        <div class="social__media"><img src="twitter.png width=17px; height=21px"/> <img src="facebook.png width=6px; height=21px"/> <img src="youtube.png width=40px; height=21px"/><img src="linkedin.png width=19px; height=21px"/></div>
         </div>
     <div class="container">
         
