another backup after adding create bid and edit bid files

--- a/DrawWorks/index.html
+++ b/DrawWorks/index.html
@@ -36,5 +36,7 @@
 <script type="text/javascript" src="projects/projectCtrl.js"></script>
 <script src="login/conRegController.js"></script>
 <script src="aboutmeCtrl.js" ></script>
+<script src="projects/createbidsCtrl.js" ></script>
+<script src="projects/submitbidsCtrl.js" ></script>
 </body>
 </html>
